create news.html Nadia

--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
     <p>A cup of brewed coffee represents a contribution of up to 1.8 grams of fiber of the recommended.</p>
     <div class="box-news">
         <div class="inner-box">
-            <img src="image/news-Image (1).png" alt="coffee">
+            <img src="img/image/news-1.png" alt="coffee">
             <div class="text-box">
                 <h3>Coffee beans</h3>
                 <p>These advertising mottos are targeted to the 56% of coffee drinking consumers.</p>
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="inner-box">
-            <img src="image/news-Image (2).png" alt="coffee">
+            <img src="img/image/news-2.png" alt="coffee">
             <div class="text-box">
                 <h3>Coffee beans</h3>
                 <p>These advertising mottos are targeted to the 56% of coffee drinking consumers.</p>
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="inner-box">
-            <img src="image/news-Image (3).png" alt="coffee">
+            <img src="img/image/news-3.png" alt="coffee">
             <div class="text-box">
                 <h3>Coffee beans</h3>
                 <p>These advertising mottos are targeted to the 56% of coffee drinking consumers.</p>
