start ivan branch

--- a/index.html
+++ b/index.html
@@ -20,7 +20,28 @@
 <!--        Вторая часть-->
         <section class="offer">
             <div class="general-width">
-            
+                <h2 class="h2-offer">That is Our Best Offer</h2>
+                <p class="p-offer">A coffee shop will help you to tell the audience what your business.</p>
+                <div class="img-offer">
+                    <div class="img-offer-left">
+                        <img src="img/image/offer-1.png" alt="coffee">
+                        <span class="span-offer">$ 5.99</span>
+                        <h3 class="h3-offer">Brazilian coffee beans</h3>
+                        <p class="p-img-offer-1">Coffee that’s always you handle your own the way you like. </p>
+                    </div>
+                    <div class="img-offer-center">
+                        <img src="img/image/offer-2.png" alt="coffee">
+                        <span class="span-offer">$ 4.99</span>
+                        <h3 class="h3-offer">Vietnam's coffee beans</h3>
+                        <p class="p-img-offer-1">Coffee that’s always you handle your own the way you like. </p>
+                    </div>
+                    <div class="img-offer-right">
+                        <img src="img/image/offer-3.png" alt="coffee">
+                        <span class="span-offer-right">$ 3.99</span>
+                        <h3 class="h3-offer">Indonesian coffee beans</h3>
+                        <p class="p-img-offer">Coffee that’s always you handle your own the way you like. </p>
+                    </div>
+                </div>
             </div>
         </section>
 <!--        Третья часть-->
@@ -44,7 +65,7 @@
     </main>
 <!--Первая часть-->
     <footer>
-        <p class="copyright-footer">&copy; Copyright 2024 HTML.am</p>
+<!--        <p class="copyright-footer">&copy; Copyright 2024 HTML.am</p>-->
     </footer>
 </body>
 </html>
