--- a/index.html
+++ b/index.html
@@ -38,7 +38,34 @@
 <!--        Пятая часть-->
         <section class="news">
             <div class="general-width">
-            
+                <h2>Update News</h2>
+                <p>A cup of brewed coffee represents a contribution of up to 1.8 grams of fiber of the recommended.</p>
+                <div class="box-news">
+                    <div class="inner-box">
+                        <img src="img/image/news-1.png" alt="coffee">
+                        <div class="text-box">
+                            <h3>Coffee beans</h3>
+                            <p>These advertising mottos are targeted to the 56% of coffee drinking consumers.</p>
+                            <a href="#">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="inner-box">
+                        <img src="img/image/news-2.png" alt="coffee">
+                        <div class="text-box">
+                            <h3>Coffee beans</h3>
+                            <p>These advertising mottos are targeted to the 56% of coffee drinking consumers.</p>
+                            <a href="#">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="inner-box">
+                        <img src="img/image/news-3.png" alt="coffee">
+                        <div class="text-box">
+                            <h3>Coffee beans</h3>
+                            <p>These advertising mottos are targeted to the 56% of coffee drinking consumers.</p>
+                            <a href="#">Learn More</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
