- Changes index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
-<!--Первая часть-->
+<!--Первая часть HEDER AND HERO-->
 <header class="header">
     <div class="general-width header-inner">
 
