- Changes logo and social icons

--- a/index.html
+++ b/index.html
@@ -158,17 +158,20 @@
                     </li>
                     <li class="social-item">
                         <a href="#" class="social-link">
-                            <img src="img/svg/facebook.svg" alt="Logo facebook" class="footer-icon">
+                            <img src="img/svg/facebook.svg" alt="Logo facebook"
+                                 class="footer-icon" width="38" height="38">
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="#" class="social-link">
-                            <img src="img/svg/instagram.svg" alt="Logo instagram" class="footer-icon">
+                            <img src="img/svg/instagram.svg" alt="Logo instagram"
+                                 class="footer-icon" width="38" height="38">
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="#" class="social-link">
-                            <img src="img/svg/link-din.svg" alt="Logo linkdin" class="footer-icon">
+                            <img src="img/svg/link-din.svg" alt="Logo linkdin"
+                                 class="footer-icon" width="38" height="38">
                         </a>
                     </li>
                 </ul>
