--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="general-width header-inner">
 
         <a href="" class="logo">
-            <img src="img/svg/coffee-cup.svg" alt="">
+            <img src="img/svg/coffee-cup.svg" alt="Logo coffee" class="logo-icon">
             Coffee
         </a>
 
@@ -158,20 +158,17 @@
                     </li>
                     <li class="social-item">
                         <a href="#" class="social-link">
-                            <img src="img/svg/facebook.svg" alt="Logo facebook"
-                                 class="footer-icon" width="38" height="38">
+                            <img src="img/svg/facebook.svg" alt="Logo facebook" class="footer-icon">
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="#" class="social-link">
-                            <img src="img/svg/instagram.svg" alt="Logo instagram"
-                                 class="footer-icon" width="38" height="38">
+                            <img src="img/svg/instagram.svg" alt="Logo instagram" class="footer-icon">
                         </a>
                     </li>
                     <li class="social-item">
                         <a href="#" class="social-link">
-                            <img src="img/svg/link-din.svg" alt="Logo linkdin"
-                                 class="footer-icon" width="38" height="38">
+                            <img src="img/svg/link-din.svg" alt="Logo linkdin" class="footer-icon">
                         </a>
                     </li>
                 </ul>
