--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <!--        Третья часть-->
         <section class="gallery">
             <div class="general-width">
-                <h1 class="one">Our Gallery</h1>
-                <p class="two">The coffee shop name generator is a great tool for those that are deliberating what to call their new coffee.</p>
+                <h1 class="h1-gallery">Our Gallery</h1>
+                <p class="p-gallery">The coffee shop name generator is a great tool for those that are deliberating what to call their new coffee.</p>
                 <div class="images">
                     <img src="img/image/gallery-1.png" alt="gallery-1"/>
                     <img src="img/image/gallery-2.png" alt="gallery-2"/>
@@ -36,9 +36,9 @@
                     <img src="img/image/gallery-5.png" alt="gallery-5"/>
                     <img src="img/image/gallery-6.png" alt="gallery-6"/>
                 </div>
-                <p class="three">
-                    <a href="#">LOAD MORE</a>
-                </p>
+
+                    <a class="a-gallery" href="#">LOAD MORE</a>
+
             </div>
         </section>
 <!--        Четвертая часть-->
