--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <!--        Третья часть-->
         <section class="gallery">
             <div class="general-width">
+                <div class="main-gallery">
                 <h1 class="h1-gallery">Our Gallery</h1>
                 <p class="p-gallery">The coffee shop name generator is a great tool for those that are deliberating what to call their new coffee.</p>
                 <div class="images">
@@ -38,7 +39,7 @@
                 </div>
 
                     <a class="a-gallery" href="#">LOAD MORE</a>
-
+                </div>
             </div>
         </section>
 <!--        Четвертая часть-->
