--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </section>
 <!--        Пятая часть-->
         <section class="news">
-            <div class="general-width">
+            <div class="general-width main-news">
                 <h2 class="h2-news">Update News</h2>
                 <p class="p-news">A cup of brewed coffee represents a contribution of up to 1.8 grams of fiber of the recommended.</p>
                 <div class="box-news">
