--- a/index.html
+++ b/index.html
@@ -112,9 +112,10 @@
                     <h2 class="h2-news">Update News</h2>
                     <p class="p-news">A cup of brewed coffee represents a contribution of up to 1.8 grams of fiber of
                         the
-                        recommended.</p>
+                        recommended.
+                    </p>
                     <div class="box-news">
-                        <div class="inner-box">
+                        <div class="inner-box1">
                             <img src="img/image/news-1.png" alt="coffee">
                             <div class="text-box">
                                 <h3 class="h3-text-box">Coffee beans</h3>
@@ -124,7 +125,7 @@
                                 <a class="a-text-box" href="#">Learn More</a>
                             </div>
                         </div>
-                        <div class="inner-box">
+                        <div class="inner-box2">
                             <img src="img/image/news-2.png" alt="coffee">
                             <div class="text-box">
                                 <h3 class="h3-text-box">Coffee beans</h3>
@@ -134,7 +135,7 @@
                                 <a class="a-text-box" href="#">Learn More</a>
                             </div>
                         </div>
-                        <div class="inner-box">
+                        <div class="inner-box3">
                             <img src="img/image/news-3.png" alt="coffee">
                             <div class="text-box">
                                 <h3 class="h3-text-box">Coffee beans</h3>
