--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
         </section>
     </main>
-<!--Первая часть-->
+<!--Первая часть--->
     <footer>
         <p class="copyright-footer">&copy; Copyright 2024 HTML.am</p>
     </footer>
