--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
-<!--Первая часть HEADER AND HERO-->
+<!--Первая часть HEADER AND HERO SECTION-->
 
     <header class="header">
         <div class="general-width">
